lab1/Test/L1-A-7-69.output
Error Type A at Line 6
Error Type A at Line 29
Error Type A at Line 39
